fix: disabled highlighting & prevented overflow

--- a/configurable-dashboard/src/app/App.css
+++ b/configurable-dashboard/src/app/App.css
@@ -12,6 +12,10 @@
     animation: App-logo-float infinite 3s ease-in-out;
   }
 }
+* {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+}
 
 .App-header {
   min-height: 100vh;
